hphp/hack/test/typecheck/assignment_sequencing/binop_increment.php
<?hh

function x(int $y): int {
  return $y + $y++;
}
